--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@ button:hover{
   align-items: center;
   height: 100px;
   padding-left: 40px;
-  padding-right: 200px;
+  padding-right: 40px;
   margin-bottom: 50px;
   position: sticky;
   background-color: transparent;
@@ -101,11 +101,16 @@ button:hover{
   color: white;
   font-size: 40px;
 }
+.authentication{
+  width: 20%;
+  display: flex;
+  gap: 10px;
+}
 .menu-header{
-  width: 70%;
+  width: 60%;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: center;
   gap: 10px;
 }
 /* header */
